# aiguru

./: .env.example  .gitignore  1751889457162.yml  CHECKLIST.md  DEPLOYMENT_EXECUTION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  GIT_MIGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_COMPLETED.md  PHASE2_DAY1_COMPLETED.md  PHASE2_DAY2_COMPLETED.md  PHASE2_DETAILED_PLAN.md  PHASE2_READY.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOYMENT_CONFIG.md  RAILWAY_DEPLOYMENT_FIX.md  README.md  RELEASE_NOTES_v2.0.md  TEST_REPORT_PHASE1.md  check_deployment.py  complete_deployment.bat  deploy_railway.bat  fix_deployment.py  nixpacks.toml  pip配置国内源方法  q  quick_deploy.sh  railway.toml  railway_config_summary.md  railway_env_vars.txt  start_dev.bat  testing-gemini-api.py  urgent_fix_deployment.py  user_data.json  像高手一样写代码.ipynb  命令.md  星际启航计划v2.docx  (+1 more)
.vercel/: project.json
a/: ai.py  game.py  (+2 more)
new_aicorrection/backend/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  UPLOAD_SUMMARY.md  WORKFLOW_DIAGRAM.md  demo_agent_grading.py  docker-compose.yml  pyproject.toml  railway.toml  railway.toml.example  requirements.txt  simple_ai_grading_test.py  test_api_simple.py  test_conversation_management.py  test_langgraph_workflow.py  test_learning_analysis.py  test_real_documents.py
new_aicorrection/backend/app/: main.py
new_aicorrection/backend/app/agents/: state.py
new_aicorrection/backend/app/api/: ai_agent.py  assignments.py  auth.py  langgraph_grading.py  websocket.py
new_aicorrection/backend/app/api/v1/: router.py
new_aicorrection/backend/app/core/: cache.py  config.py  config_loader.py  firebase_auth.py  intelligent_batch_processor.py  rate_limit.py  supabase_auth.py  supabase_middleware.py
new_aicorrection/backend/app/models/: class_model.py  file.py  user.py
new_aicorrection/backend/app/schemas/: __init__.py  grading.py  user.py
new_aicorrection/backend/app/services/: ai_agent_service.py  assignment_scheduler.py  assignment_service.py  email_service.py  grading_processor.py  langgraph_grading_workflow.py  langgraph_state.py  notification_service.py  user_service.py  websocket_manager.py
new_aicorrection/backend/app/services/langgraph_nodes/: __init__.py  image_enhancer.py  region_locator.py  result_assembler.py  rubric_interpreter.py  scoring_agent.py  upload_validator.py
new_aicorrection/backend/scripts/: format.bat  lint.sh  setup_and_test.bat  setup_and_test.sh  test.bat  validate_config.bat  verify_setup.py
new_aicorrection/backend/tests/: test_ai_grading_api.py  test_config.py  test_file_storage_service.py  test_grading_api.py  test_location_annotation_agent.py
(+606 files in other folders)
